--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 				font-family: 'Roboto Slab', serif;
 				font-size: 14px;
 				margin: 5% auto;
-				background: #f2f2f2;
-				color: #444;
+				background: #6389a8;
+				color: #fff;
 				line-height: 1.6;
-				text-shadow: 0 1px 0 #ffffff;
+				text-shadow: 0 1px 0 #000;
 				max-width: 75%;
 			}
 			a {
-				border-bottom: 1px solid #444;
-				color: #444;
+				border-bottom: 1px solid #fff;
+				color: #fff;
 				text-decoration: none;
 			}
 			a:hover {
