--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<style>
 			body {
 				font-family: 'Roboto Slab', serif;
-				font-size: 14px;
+				font-size: 1em;
 				margin: 5% auto;
 				background: #6389a8;
 				color: #fff;
