--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 			h1, h2 {
 				line-height: 1.3;
 			}
+			footer {
+				display: table-cell;
+				vertical-align: bottom;
+			}
 		</style>
 	</head>
 	<body>
