--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 		<link href="http://mattata.pw" rel="canonical"/>
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 		<style>
+			@font-face {
+				font-family: BelloPro;
+				src: url(../fonts/BelloPro.ttf) format('truetype'), url(../fonts/BelloPro.woff) format('woff');
+			}
 			body {
 				font-family: 'Roboto Slab', serif;
 				font-size: 1em;
@@ -26,7 +30,10 @@
 			a:hover {
 				border-bottom: 0
 			}
-			h1, h2 {
+			h1 {
+				font-family: BelloPro;
+				top: 0;
+				position: fixed;
 				line-height: 1.3;
 			}
 			footer {
