--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				top: 0;
 				position: fixed;
 				line-height: 1.3;
-				margin: 1% auto;
+				padding: 1% auto;
 			}
 			footer {
 				bottom: 0;
