--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<style>
 			@font-face {
 				font-family: BelloPro;
-				src: url(../fonts/BelloPro.ttf) format('truetype'), url(../fonts/BelloPro.woff) format('woff');
+				src: url(../fonts/BelloPro.ttf) format("truetype"), url(../fonts/BelloPro.woff) format("woff");
 			}
 			body {
-				font-family: 'Roboto Slab', serif;
+				font-family: "Roboto Slab", serif;
 				font-size: 1em;
 				margin: 5% auto;
 				background: #6389a8;
@@ -30,15 +30,17 @@
 			a:hover {
 				border-bottom: 0
 			}
-			h1 {
+			#heading {
 				font-family: BelloPro;
 				font-size: 2em;
 				top: 0;
 				position: fixed;
 				line-height: 1.3;
-				padding: 1% auto;
 			}
-			footer {
+			#body {
+				padding-top: 5%;
+			}
+			#footer {
 				bottom: 0;
 				position: fixed;
 				vertical-align: bottom;
@@ -46,13 +48,8 @@
 		</style>
 	</head>
 	<body>
-		<header>
-			<h1>mattata</h1>
-			<aside>A plugin-based bot for Telegram; written in Lua, with ❤️</aside>
-		</header>
-		<p>Click <a href="https://github.com/matthewhesketh/mattata">here</a> to see the official source code!</p>
-		<footer>
-			<p>&copy; Matthew Hesketh, 2016</p>
-		</footer>
+		<div id="heading">mattata</div>
+		<div id="body"><p>A plugin-based bot for Telegram; written in Lua, with ❤️<br>Click <a href="https://github.com/matthewhesketh/mattata">here</a> to see the official source code!</p></div>
+		<div id="footer"><p>&copy; Matthew Hesketh, 2016</p></div>
 	</body>
 </html>
