--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 				src: url(../fonts/BelloPro.ttf) format("truetype"), url(../fonts/BelloPro.woff) format("woff");
 			}
 			body {
-				font-family: "Roboto Slab", serif;
-				font-size: 1em;
 				margin: 5% auto;
 				background: #6389a8;
 				color: #fff;
@@ -23,6 +21,8 @@
 				max-width: 75%;
 			}
 			a {
+				font-family: "Roboto Slab", serif;
+				font-size: 1em;
 				border-bottom: 1px solid #fff;
 				color: #fff;
 				text-decoration: none;
@@ -32,13 +32,15 @@
 			}
 			#heading {
 				font-family: BelloPro;
-				font-size: 2em;
+				font-size: 3em;
 				top: 0;
 				position: fixed;
 				line-height: 1.3;
 			}
 			#body {
-				padding-top: 5%;
+				font-family: "Roboto Slab", serif;
+				font-size: 1em;
+				margin-top: 5%;
 			}
 			#footer {
 				bottom: 0;
