--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			}
 			a {
 				font-family: "Roboto Slab", serif;
-				font-size: 1em;
+				font-size: 1.5em;
 				border-bottom: 1px solid #fff;
 				color: #fff;
 				text-decoration: none;
@@ -32,14 +32,14 @@
 			}
 			#heading {
 				font-family: BelloPro;
-				font-size: 3em;
+				font-size: 4em;
 				top: 0;
 				position: fixed;
 				line-height: 1.3;
 			}
 			#body {
 				font-family: "Roboto Slab", serif;
-				font-size: 1em;
+				font-size: 1.5em;
 				margin-top: 5%;
 			}
 			#footer {
@@ -51,7 +51,6 @@
 	</head>
 	<body>
 		<div id="heading">mattata</div>
-		<div id="body"><p>A plugin-based bot for Telegram; written in Lua, with ❤️<br>Click <a href="https://github.com/matthewhesketh/mattata">here</a> to see the official source code!</p></div>
-		<div id="footer"><p>&copy; Matthew Hesketh, 2016</p></div>
+		<div id="body"><p>A plugin-based bot for Telegram; written in Lua, with ❤️<br>Click <a href="https://github.com/matthewhesketh/mattata">here</a> to see the official source code!<br><br>&copy; Matthew Hesketh, 2016</p></div>
 	</body>
 </html>
