--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				src: url(../fonts/BelloPro.ttf) format("truetype"), url(../fonts/BelloPro.woff) format("woff");
 			}
 			body {
+				padding: 5%;
 				margin: 5% auto;
 				background: #6389a8;
 				color: #fff;
@@ -22,7 +23,7 @@
 			}
 			a {
 				font-family: "Roboto Slab", serif;
-				font-size: 1.5em;
+				font-size: 1em;
 				border-bottom: 1px solid #fff;
 				color: #fff;
 				text-decoration: none;
@@ -33,19 +34,11 @@
 			#heading {
 				font-family: BelloPro;
 				font-size: 4em;
-				top: 0;
-				position: fixed;
 				line-height: 1.3;
 			}
-			#body {
+			#body p {
 				font-family: "Roboto Slab", serif;
-				font-size: 1.5em;
-				margin-top: 5%;
-			}
-			#footer {
-				bottom: 0;
-				position: fixed;
-				vertical-align: bottom;
+				font-size: 1em;
 			}
 		</style>
 	</head>
