Added a few line breaks for more regular spacing

--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 	</head>
 	<body>
 		<div id="heading">mattata</div>
-		<div id="body"><p>A plugin-based bot for Telegram; written in Lua, with ❤️<br>Click <a href="https://github.com/matthewhesketh/mattata">here</a> to see the official source code!<br><br>&copy; Matthew Hesketh, 2016</p></div>
+		<div id="body"><p><br>A plugin-based bot for Telegram; written in Lua, with ❤️<br><br>Click <a href="https://github.com/matthewhesketh/mattata">here</a> to see the official source code!<br><br><br><br>&copy; Matthew Hesketh, 2016<br></p></div>
 	</body>
 </html>
