--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>mattata</title>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0"/>
+		<meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0"/>
 		<meta name="description" content="A plugin-based bot for Telegram; written in Lua, with ❤️"/>
 		<link href="http://mattata.pw" rel="canonical"/>
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
@@ -13,9 +13,8 @@
 				src: url(../fonts/BelloPro.ttf) format("truetype"), url(../fonts/BelloPro.woff) format("woff");
 			}
 			body {
-				padding: 5%;
 				margin: 5% auto;
-				background: #6389a8;
+				background-color: #6389a8;
 				color: #fff;
 				line-height: 1.6;
 				text-shadow: 0 1px 0 #000;
