--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 				src: url(../fonts/BelloPro.ttf) format("truetype"), url(../fonts/BelloPro.woff) format("woff");
 			}
 			body {
-				margin: 5% auto;
 				background-color: #6389a8;
 				color: #fff;
 				line-height: 1.6;
 				text-shadow: 0 1px 0 #000;
-				max-width: 75%;
 			}
 			a {
 				font-family: "Roboto Slab", serif;
@@ -63,7 +61,7 @@
 			var windowHalfY = window.innerHeight / 2;
 			
 			var particles = []; 
-			var particleImage = new Image();//THREE.ImageUtils.loadTexture( "img/ParticleSmoke.png" );
+			var particleImage = new Image();
 			particleImage.src = 'img/ParticleSmoke.png'; 
 
 		
@@ -160,7 +158,6 @@
 
 				
 			}
-
 		</script>
 		<div id="heading">mattata</div>
 		<div id="body"><p><br>A plugin-based bot for Telegram; written in Lua, made with ❤.️<br>Created and maintained by <a href="https://telegram.me/wrxck">@wrxck</a>.<br>This project is open source and can be found <a href="https://github.com/matthewhesketh/mattata">on GitHub</a>!<br><br><br>&copy; Matthew Hesketh, 2016<br></p></div>
