--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="author" content="Matthew Hesketh">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/mattata.css" rel="stylesheet" type="text/css">
-    <link href="css/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" type="text/css">
+    <script src="https://use.fontawesome.com/b9b6b785d9.js"></script>
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
