Removed placeholder anchors

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
                     <li class="hidden"><a href="#page-top"></a></li>
-                    <li><a class="page-scroll" href="#" onclick="mattataSmoothScroll(document.getElementById('about'))">About</a></li>
-                    <li><a class="page-scroll" href="#" onclick="mattataSmoothScroll(document.getElementById('fork'))">Fork</a></li>
-                    <li><a class="page-scroll" href="#" onclick="mattataSmoothScroll(document.getElementById('contact'))">Contact</a></li>
+                    <li><a class="page-scroll" onclick="mattataSmoothScroll(document.getElementById('about'))">About</a></li>
+                    <li><a class="page-scroll" onclick="mattataSmoothScroll(document.getElementById('fork'))">Fork</a></li>
+                    <li><a class="page-scroll" onclick="mattataSmoothScroll(document.getElementById('contact'))">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -64,7 +64,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="mattata-heading">mattata</h1>
                         <p class="intro-text">An open source Telegram bot written in Lua<br>Made with <i class="pink fa fa-heart fa-fw"></i></p>
-                        <a href="#" onclick="mattataSmoothScroll(document.getElementById('about'))" class="btn btn-circle page-scroll">
+                        <a onclick="mattataSmoothScroll(document.getElementById('about'))" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
@@ -76,7 +76,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>What is mattata?</h2>
-                <p>mattata is a plugin-based bot for Telegram Messenger, written in Lua and open source. You are free to <a class="page-scroll" href="#" onclick="mattataSmoothScroll(document.getElementById('fork'))">fork</a> mattata and, well, do what you wish with it - just abide by the <a href="license.txt">license</a>.</p>
+                <p>mattata is a plugin-based bot for Telegram Messenger, written in Lua and open source. You are free to <a class="page-scroll" onclick="mattataSmoothScroll(document.getElementById('fork'))">fork</a> mattata and, well, do what you wish with it - just abide by the <a href="license.txt">license</a>.</p>
                 <p>Originally based upon <a href="http://otou.to">otouto</a>, mattata has been re-shaped and improved over time to provide an immersive experience for users of any age. Notable features include a Cleverbot implementation (which uses my own <a href="https://github.com/matthewhesketh/mattataAi">Lua library</a>), group administration functionality and a robust configurable plugin system. These plugins all provide a unique purpose and are frequently improved.</p>
             </div>
         </div>
