--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <li><a href="https://fb.me/wrxck" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a></li>
                     <li><a href="https://telegram.me/wrxck" class="btn btn-default btn-lg"><i class="fa fa-telegram fa-fw"></i> <span class="network-name">Telegram</span></a></li>
                 </ul>
-                <br><br><a class="github-button" href="https://github.com/matthewhesketh" data-style="mega" data-count-href="/matthewhesketh/followers" data-count-api="/users/matthewhesketh#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @matthewhesketh on GitHub">Follow @matthewhesketh</a><br><br><br><br>
+                <br><br><a class="github-button" href="https://github.com/wrxck" data-style="mega" data-count-href="/wrxck/followers" data-count-api="/users/wrxck#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @wrxck on GitHub">Follow @wrxck</a><br><br><br><br>
             </div>
         </div>
     </section>
